objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Characteristic__c</fullName>
        <inlineHelpText>List of the characteristics collected by the device model</inlineHelpText>
        <label>Characteristics collected</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Country__c</fullName>
        <description>Content Country defaulted from user. Can be modified.</description>
        <inlineHelpText>Country where the device is commercialized. By default the author country.</inlineHelpText>
        <label>Device Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Type_New_Value__c</fullName>
        <description>Allows to enter Device Type New Value if &quot;Other&quot; value is selected for Device type</description>
        <inlineHelpText>New value of Device Type to be created. The administrator will be notified.</inlineHelpText>
        <label>Other device type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentCategory__c</fullName>
        <label>Document Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Case</fullName>
                </value>
                <value>
                    <fullName>Business Process Guide</fullName>
                </value>
                <value>
                    <fullName>Com&apos;X Model</fullName>
                    <default>true</default>
                    <label>Com&apos;X Model</label>
                </value>
                <value>
                    <fullName>Data Sheet</fullName>
                </value>
                <value>
                    <fullName>Detailled Functional Specification</fullName>
                </value>
                <value>
                    <fullName>Device Profile</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>General Presentation</fullName>
                </value>
                <value>
                    <fullName>KPI definition</fullName>
                </value>
                <value>
                    <fullName>Minutes of Meeting</fullName>
                </value>
                <value>
                    <fullName>Program Rule</fullName>
                </value>
                <value>
                    <fullName>Project Contract</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Training Catalog Document</fullName>
                </value>
                <value>
                    <fullName>Training Unit Tutorial</fullName>
                </value>
                <value>
                    <fullName>Upload Data Procedure</fullName>
                </value>
                <value>
                    <fullName>User Documentation Document</fullName>
                </value>
                <value>
                    <fullName>User Story</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Record_ID__c</fullName>
        <description>The original Note or Attachment ID this ContentVersion was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</description>
        <externalId>true</externalId>
        <inlineHelpText>The original Note or Attachment ID this ContentVersion was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</inlineHelpText>
        <label>Original Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Record_Owner_ID__c</fullName>
        <description>The owner ID of the original Note or Attachment that was converted.</description>
        <externalId>true</externalId>
        <inlineHelpText>The owner ID of the original Note or Attachment that was converted.</inlineHelpText>
        <label>Original Record Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Record_Parent_ID__c</fullName>
        <description>The original Note or Attachment parent ID this ContentVersion was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</description>
        <externalId>true</externalId>
        <inlineHelpText>The original Note or Attachment parent ID this ContentVersion was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</inlineHelpText>
        <label>Original Record Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Brand_New_Value__c</fullName>
        <description>Allows to enter a new Brand value if &quot;Other&quot; Value is selected in Brand</description>
        <inlineHelpText>New value of Brand to be created. The administrator will be notified.</inlineHelpText>
        <label>Other Brand</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manufacturer__c</fullName>
        <description>Brand</description>
        <inlineHelpText>Brand of the device. The proposed list of brands depends on the country. Select Other to ask for the creation of a new value.</inlineHelpText>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Content_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ABB</fullName>
                </value>
                <value>
                    <fullName>BMI</fullName>
                </value>
                <value>
                    <fullName>Chauvin Arnoux</fullName>
                </value>
                <value>
                    <fullName>Circuitor</fullName>
                </value>
                <value>
                    <fullName>Continental Control systems</fullName>
                </value>
                <value>
                    <fullName>Dranetz</fullName>
                </value>
                <value>
                    <fullName>Eaton</fullName>
                </value>
                <value>
                    <fullName>Electro Industries</fullName>
                </value>
                <value>
                    <fullName>E-Mon</fullName>
                </value>
                <value>
                    <fullName>General Electric</fullName>
                </value>
                <value>
                    <fullName>Hager</fullName>
                </value>
                <value>
                    <fullName>Honeywell</fullName>
                </value>
                <value>
                    <fullName>Ilme</fullName>
                </value>
                <value>
                    <fullName>Imesys</fullName>
                </value>
                <value>
                    <fullName>IMS</fullName>
                </value>
                <value>
                    <fullName>Legrand</fullName>
                </value>
                <value>
                    <fullName>Leviton</fullName>
                </value>
                <value>
                    <fullName>Quadlogic</fullName>
                </value>
                <value>
                    <fullName>Rockwell</fullName>
                </value>
                <value>
                    <fullName>Satec</fullName>
                </value>
                <value>
                    <fullName>Schneider Electric</fullName>
                </value>
                <value>
                    <fullName>Siemens</fullName>
                </value>
                <value>
                    <fullName>Socomec</fullName>
                </value>
                <value>
                    <fullName>Triacta</fullName>
                </value>
                <value>
                    <fullName>Tyco Electronics</fullName>
                </value>
                <value>
                    <fullName>Veris</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Part_Number__c</fullName>
        <description>Product Part Number</description>
        <inlineHelpText>Part Number(s) of the device(s) concerned by the device model</inlineHelpText>
        <label>Part Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_range__c</fullName>
        <description>Device type</description>
        <inlineHelpText>Type of device.  Select Other to ask for the creation of a new value and provide this value in Other Device Type.</inlineHelpText>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building Management Systems</fullName>
                </value>
                <value>
                    <fullName>Capacitor banks</fullName>
                </value>
                <value>
                    <fullName>Circuit breakers</fullName>
                </value>
                <value>
                    <fullName>Command relays</fullName>
                </value>
                <value>
                    <fullName>Contactors</fullName>
                </value>
                <value>
                    <fullName>Control relays</fullName>
                </value>
                <value>
                    <fullName>Drives</fullName>
                </value>
                <value>
                    <fullName>Electrical equipments</fullName>
                </value>
                <value>
                    <fullName>Emergency lighting</fullName>
                </value>
                <value>
                    <fullName>Energy meters</fullName>
                </value>
                <value>
                    <fullName>EV Charging Stations</fullName>
                </value>
                <value>
                    <fullName>HVAC equipments</fullName>
                </value>
                <value>
                    <fullName>Industrial controllers</fullName>
                </value>
                <value>
                    <fullName>IT equipments</fullName>
                </value>
                <value>
                    <fullName>Insulation controller</fullName>
                </value>
                <value>
                    <fullName>Lighting controllers</fullName>
                </value>
                <value>
                    <fullName>Load shedders</fullName>
                </value>
                <value>
                    <fullName>MV Switchgears</fullName>
                </value>
                <value>
                    <fullName>Power meters</fullName>
                </value>
                <value>
                    <fullName>Power supply</fullName>
                </value>
                <value>
                    <fullName>Protection relays</fullName>
                </value>
                <value>
                    <fullName>Refrigeration controllers</fullName>
                </value>
                <value>
                    <fullName>Secured power (UPS)</fullName>
                </value>
                <value>
                    <fullName>Street Lighting</fullName>
                </value>
                <value>
                    <fullName>Signalisation equipments</fullName>
                </value>
                <value>
                    <fullName>Solar secured power</fullName>
                </value>
                <value>
                    <fullName>Switches</fullName>
                </value>
                <value>
                    <fullName>Temperature controllers</fullName>
                </value>
                <value>
                    <fullName>Timers</fullName>
                </value>
                <value>
                    <fullName>Transfer switches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Process_ID__c</fullName>
        <description>This will store SFM process id and Parent Record ID as a unique identifier.</description>
        <inlineHelpText>This will store SFM process id and Parent Record ID as a unique identifier.</inlineHelpText>
        <label>Process ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated_by_Schneider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tested and Validated by Schneider Electric</description>
        <inlineHelpText>Indicates whether this model has been Tested and Validated by Schneider Electric</inlineHelpText>
        <label>Validated by Schneider Electric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleToCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Knowledge Attachment Visible to Customer</description>
        <inlineHelpText>Knowledge Attachment Visible to Customer</inlineHelpText>
        <label>Visible To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleToEmployee__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Knowledge Attachment Visible to Employee</description>
        <inlineHelpText>Knowledge Attachment Visible to Employee</inlineHelpText>
        <label>Visible To Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleToLimited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Knowledge Attachment Visible to Limited Customer</description>
        <label>Visible To Limited Customer</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Manual</fullName>
        <active>true</active>
        <label>Manual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partners_Com_X</fullName>
        <active>true</active>
        <description>Partners - Com&apos;X used for collaborative file library</description>
        <label>Partners - Com&apos;X</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Document</fullName>
        <active>true</active>
        <label>Project Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reference_Document</fullName>
        <active>true</active>
        <label>Reference Document</label>
    </recordTypes>
    <validationRules>
        <fullName>DeviceTypeMandatory</fullName>
        <active>true</active>
        <description>Device type is mandatory</description>
        <errorConditionFormula>ISPICKVAL(Product_range__c, &apos;&apos;) &amp;&amp;  RecordType.DeveloperName = &apos;Partners_Com_X&apos; &amp;&amp; NOT($User.BypassVR__c)</errorConditionFormula>
        <errorDisplayField>Product_range__c</errorDisplayField>
        <errorMessage>Device type is missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DeviceTypeOtherMandatory</fullName>
        <active>true</active>
        <description>Device Type Other Value is mandatory if Device type equals Other</description>
        <errorConditionFormula>AND 
( 
ISPICKVAL( Product_range__c, &apos;Other&apos;) , OR (ISNULL(Device_Type_New_Value__c ) , ISBLANK(Device_Type_New_Value__c )) 
) &amp;&amp; NOT($User.BypassVR__c) &amp;&amp;  RecordType.DeveloperName = &apos;Partners_Com_X&apos;</errorConditionFormula>
        <errorMessage>*** The device Type &apos;Other&apos; value is missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductBrandMandatory</fullName>
        <active>true</active>
        <description>Product Brand is mandatory</description>
        <errorConditionFormula>ISPICKVAL( Product_Manufacturer__c , &apos;&apos;) &amp;&amp; NOT($User.BypassVR__c) &amp;&amp;  RecordType.DeveloperName = &apos;Partners_Com_X&apos;</errorConditionFormula>
        <errorMessage>*** Brand is missing, select the country before</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductBrandOtherMandatory</fullName>
        <active>true</active>
        <description>The product brand &apos;Other&apos; value is mandatory if Product Brand equals Other</description>
        <errorConditionFormula>AND 
( 
ISPICKVAL( Product_Manufacturer__c , &apos;Other&apos;) , OR (ISNULL(Product_Brand_New_Value__c ) , ISBLANK(Product_Brand_New_Value__c )) 
) &amp;&amp; NOT($User.BypassVR__c) &amp;&amp;  RecordType.DeveloperName = &apos;Partners_Com_X&apos;</errorConditionFormula>
        <errorMessage>*** The product brand &apos;Other&apos; value is missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductPartNumberMandatory</fullName>
        <active>true</active>
        <description>Product part number is mandatory</description>
        <errorConditionFormula>OR (ISBLANK( Product_Part_Number__c ), ISNULL( Product_Part_Number__c )) &amp;&amp; NOT($User.BypassVR__c) &amp;&amp;  RecordType.DeveloperName = &apos;Partners_Com_X&apos;</errorConditionFormula>
        <errorMessage>*** The product part number is missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidatedbySEProfile</fullName>
        <active>true</active>
        <description>Only standard users can update this field</description>
        <errorConditionFormula>AND( 
ISCHANGED(Validated_by_Schneider__c), 
ISPICKVAL($Profile.UserType, &quot;Partner&quot;)|| 
ISPICKVAL($Profile.UserType, &quot;PowerPartner&quot;)|| 
ISPICKVAL($Profile.UserType, &quot;Customer Portal Manager&quot;)|| 
ISPICKVAL($Profile.UserType, &quot;Customer Portal User&quot;)|| 
ISPICKVAL($Profile.UserType, &quot;Guest&quot;)|| 
ISPICKVAL($Profile.UserType, &quot;High Volume Portal&quot;)|| 
ISPICKVAL($Profile.UserType, &quot;CSN Only&quot;)|| 
ISPICKVAL($Profile.UserType, &quot;Self Service&quot;)) &amp;&amp; NOT($User.BypassVR__c) &amp;&amp;  RecordType.DeveloperName = &apos;Partners_Com_X&apos;</errorConditionFormula>
        <errorDisplayField>Validated_by_Schneider__c</errorDisplayField>
        <errorMessage>Not allow to update this field</errorMessage>
    </validationRules>
</CustomObject>